<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleUpload</string>
    <string name="http_user_agent">SimpleUpload/0.1</string>

    <string name="history_list_item_thumbnail_caption">Thumbnail</string>

    <string name="action_settings">Settings</string>
    <string name="action_clear_history">Clear history</string>
    <string name="action_delete_items">Delete items</string>
    <string name="action_copy_url">Copy URL</string>
    <string name="action_upload">Upload image</string>
    <string name="action_cancel_upload">Cancel upload</string>

    <string name="dialog_clear_history_title">Clear history</string>
    <string name="dialog_clear_history_prompt">Are you sure you want to erase the list of uploaded images?</string>
    <string name="dialog_clear_history">Clear history</string>
    <string name="dialog_cancel">Cancel</string>

    <plurals name="uploader_uploading_toast">
        <item quantity="zero">No images to upload!</item>
        <item quantity="one">Uploading image!</item>
        <item quantity="other">Uploading %d images!</item>
    </plurals>
    <string name="uploader_notification_uploading">Uploading image</string>
    <string name="uploader_notification_quantity">Image %1$d of %2$d.</string>
	<string name="uploader_notification_successful">Upload successful</string>
	<string name="uploader_notification_failure">Upload failed</string>
	<string name="uploader_failed_unauthorized">Wrong username or password. Tap to fix.</string>
	<string name="uploader_failed_wrong_url">URL might be wrong (error %1$d). Tap to fix.</string>
	<string name="uploader_failed_generic">Please try your upload again.</string>

	<string name="clipboardreceiver_copied">Copied image URL</string>
	<string name="clipboardreceiver_label">Image URL</string>

	<string name="settings_must_be_filled_out">All settings must be filled out to upload images.</string>

	<string name="pref_activity_name">SimpleUpload Settings</string>
    <string name="pref_category_user">User</string>
    <string name="pref_upload_username">Username</string>
    <string name="pref_upload_password">Password</string>
    <string name="pref_category_server">Server</string>
    <string name="pref_upload_url">Upload URL</string>
    <string name="pref_upload_username_empty">No username set</string>
    <string name="pref_upload_password_empty">No password set</string>
    <string name="pref_upload_url_empty">No URL set</string>

    <string name="pref_category_about">About</string>
    <string name="pref_about_version">version %s</string>
    <string name="pref_about_website">Website</string>
    <string name="pref_about_website_detail">http://www.stackallocated.com/</string>
    <string name="pref_about_email">E-mail</string>
    <string name="pref_about_email_detail">hans@stackallocated.com</string>
    <string name="pref_about_email_link">mailto:hans@stackallocated.com</string>
    <string name="pref_about_email_subject">Feedback about SimpleUpload</string>
</resources>
